[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textual-nerv"
version = "0.1.0"
description = "NERV theme for Textual applications - Evangelion-inspired aesthetic"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Willem" }
]
keywords = ["textual", "theme", "nerv", "evangelion", "tui", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/willem/textual-nerv"
Repository = "https://github.com/willem/textual-nerv"

[tool.hatch.build.targets.wheel]
packages = ["textual_nerv"]
